apps/traefik/overlays/prod/ipallow-list-middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: local-ipallowlist
spec:
  ipAllowList:
    sourceRange:
      - 127.0.0.1/32
      - 10.10.1.0/24
      - 10.10.1.30/32
