apps/traefik/overlays/prod/middleware-auth-basic.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: middleware-auth-basic
  namespace: traefik
spec:
  basicAuth:
    secret: middleware-auth-basic-secret
    realm: sobrinho.pt
    removeHeader: true
