apps/traefik/overlays/prod/traefik-api-key-auth.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: traefik-api-key-auth
  namespace: traefik
spec:
  basicAuth:
    secret: api-key-secret
