apps/traefik/overlays/prod/traefik-api-key.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: api-key
spec:
  plugin:
    apiKey:
      secretParam: Api-Key
      kind: header
      secretValues:
        - urn:k8s:secret:api-key-secret:API_KEY
