apps/traefik/overlays/prod/traefik-basic-auth.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: traefik-basic-auth
  namespace: traefik
spec:
  basicAuth:
    secret: basic-auth-secret
    realm: sobrinho.pt
    removeHeader: true
