apps/traefik/overlays/prod/middleware-auth-s3-forward.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: middleware-auth-s3-forward
  namespace: traefik
spec:
  replicas: 1
  selector:
    matchLabels:
      app: middleware-auth-s3-forward
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: middleware-auth-s3-forward
    spec:
      terminationGracePeriodSeconds: 60
      nodeSelector:
        kubernetes.io/arch: arm64
      containers:
        - name: middleware-auth-s3-forward
          image: ghcr.io/csobrinho/traefik-s3-forward-auth:main@sha256:1e25b17b24003273978068015e5dfd9b8899e74f40444ca0b80fb893b4b7fd0b
          args: ["--config=/config/config.yaml"]
          resources:
            limits:
              cpu: 200m
              memory: 256Mi
          ports:
            - containerPort: 4182
              protocol: TCP
          volumeMounts:
            - name: config
              mountPath: /config
      volumes:
        - name: config
          secret:
            secretName: middleware-auth-s3-forward-secret
---
apiVersion: v1
kind: Service
metadata:
  name: middleware-auth-s3-forward
  namespace: traefik
spec:
  type: ClusterIP
  ports:
    - name: auth-http
      port: 4182
      targetPort: 4182
  selector:
    app: middleware-auth-s3-forward
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: middleware-auth-s3-forward
  namespace: traefik
spec:
  forwardAuth:
    address: http://middleware-auth-s3-forward:4182
    trustForwardHeader: true
