apps/traefik/overlays/prod/traefik-external.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    metallb.io/address-pool: pool-infra-ext
  labels:
    app.kubernetes.io/name: traefik
  name: traefik-external
  namespace: traefik
spec:
  ports:
    - name: web-ext
      port: 80
      targetPort: web-ext
    - name: websecure-ext
      port: 443
      targetPort: websecure-ext
  selector:
    app.kubernetes.io/instance: traefik-traefik
    app.kubernetes.io/name: traefik
  type: LoadBalancer
