apps/traefik/overlays/prod/traefik-mqtt.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kube-vip.io/loadbalancerIPs: 10.10.1.7
  labels:
    app.kubernetes.io/name: traefik
  name: traefik-mqtt
  namespace: traefik
spec:
  ports:
    - name: mqtt
      port: 1883
      targetPort: mqtt
  selector:
    app.kubernetes.io/instance: traefik-traefik
    app.kubernetes.io/name: traefik
  type: LoadBalancer
