apps/traefik/overlays/prod/middleware-auth-forward.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: middleware-auth-forward
  namespace: traefik
spec:
  replicas: 1
  selector:
    matchLabels:
      app: middleware-auth-forward
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: middleware-auth-forward
    spec:
      terminationGracePeriodSeconds: 60
      containers:
        - image: thomseddon/traefik-forward-auth:2.2.0@sha256:e875194d67e21c077f3de0b9d315bb3023a226f2cac81ddd9d02a4250ed89b4b
          name: middleware-auth-forward
          resources:
            limits:
              cpu: 200m
              memory: 256Mi
          ports:
            - containerPort: 4181
              protocol: TCP
          volumeMounts:
            - name: middleware-auth-forward-config
              mountPath: /config
              subPath: middleware-auth-forward.ini
      volumes:
        - name: middleware-auth-forward-config
          configMap:
            name: middleware-auth-forward-config
        - name: middleware-auth-forward-secret
          secret:
            secretName: middleware-auth-forward-secret
---
apiVersion: v1
kind: Service
metadata:
  name: middleware-auth-forward
  namespace: traefik
spec:
  type: ClusterIP
  ports:
    - name: auth-http
      port: 4181
      targetPort: 4181
  selector:
    app: middleware-auth-forward
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: middleware-auth-forward
  namespace: traefik
  annotations:
    external-dns.alpha.kubernetes.io/target: infra-int
spec:
  entryPoints:
    - websecure
    - websecure-ext
  routes:
    - match: Host(`auth.sobrinho.pt`)
      kind: Rule
      services:
        - name: middleware-auth-forward
          port: 4181
  tls:
    secretName: traefik-cert
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: middleware-auth-forward
  namespace: traefik
spec:
  forwardAuth:
    address: http://middleware-auth-forward:4181
    trustForwardHeader: true
    maxResponseBodySize: 2097152
    authResponseHeaders:
      - X-Forwarded-User
